Make VR 'browsing mode' a cross-platform concept + add regression test.

Moves the concept of being in browsing mode into VRDeviceBase.

Bug: 777868
Change-Id: I5ab317faf5ad04abb47558e041446cfc1a484da0