chrome/browser/android/vr_shell/vr_shell_delegate.cc
@@ -79,7 +79,7 @@ VrShellDelegate* VrShellDelegate::GetNativeVrShellDelegate(
 void VrShellDelegate::SetDelegate(VrShell* vr_shell,
                                   gvr::ViewerType viewer_type) {
   vr_shell_ = vr_shell;
-  device::GvrDevice* device = static_cast<device::GvrDevice*>(GetDevice());
+  device::VRDevice* device = GetDevice();
   if (device)
     device->SetInBrowsingMode(true);
 
@@ -94,7 +94,7 @@ void VrShellDelegate::SetDelegate(VrShell* vr_shell,
 
 void VrShellDelegate::RemoveDelegate() {
   vr_shell_ = nullptr;
-  device::GvrDevice* device = static_cast<device::GvrDevice*>(GetDevice());
+  device::VRDevice* device = GetDevice();
   if (device) {
     device->SetInBrowsingMode(false);
     device->OnExitPresent();
@@ -177,7 +177,7 @@ void VrShellDelegate::Destroy(JNIEnv* env, const JavaParamRef<jobject>& obj) {
 void VrShellDelegate::SetDeviceId(unsigned int device_id) {
   device_id_ = device_id;
   if (vr_shell_) {
-    device::GvrDevice* device = static_cast<device::GvrDevice*>(GetDevice());
+    device::VRDevice* device = GetDevice();
     if (device)
       device->SetInBrowsingMode(true);
   }
